...
  @override
  Widget build(BuildContext context) {
    return BlocBuilder<ThemeBloc, ThemeState>(
        bloc: bloc,
        builder: (BuildContext context, ThemeState state) {
          return ListTile(
            key: const Key("themeOption"),
            title: Text(L10N.of(context).tr.theme),
            subtitle: Text(state.theme?.display(context) ?? ""),
            trailing: FaIcon(L10N.of(context).rtl
                ? FontAwesomeIcons.chevronLeft
                : FontAwesomeIcons.chevronRight),
            leading: const FaIcon(FontAwesomeIcons.palette),
...
                            RadioListTile<ThemeType>(
                              key: const Key("themeLight"),
                              title: Text(L10N.of(context).tr.light),
                              value: ThemeType.light,
                            ),
                            RadioListTile<ThemeType>(
                              key: const Key("themeDark"),
                              title: Text(L10N.of(context).tr.dark),
                              value: ThemeType.dark,
                            ),
                            RadioListTile<ThemeType>(
                              key: const Key("themeBlack"),
                              title: Text(L10N.of(context).tr.black),
...
