...
                    setState(() => _startDate = dt),
                onEndChosen: (DateTime? dt) => setState(() => _endDate = dt)),
            BlocBuilder<SettingsBloc, SettingsState>(
              bloc: settingsBloc,
              builder: (BuildContext context, SettingsState settingsState) =>
                  ExpansionTile(
                key: const Key("optionColumns"),
                title: Text(L10N.of(context).tr.columns,
                    style: TextStyle(
                        color: Theme.of(context).colorScheme.primary,
                        fontWeight: FontWeight.w700)),
                children: <Widget>[
                  SwitchListTile.adaptive(
...
